compilo/sauv3/y.output
Grammaire

    0 $accept: Prg $end

    1 Prg: Fonction Prg
    2    | %empty

    3 $@1: %empty

    4 Fonction: tInt tId $@1 tPo Args tPf Body

    5 Args: %empty
    6     | Arg ListeArgs

    7 ListeArgs: tVir Arg ListeArgs
    8          | %empty

    9 Arg: tInt tId

   10 $@2: %empty

   11 $@3: %empty

   12 Body: tAo $@2 ListeInstr $@3 tAf

   13 ListeInstr: Instr ListeInstr
   14           | %empty

   15 Instr: Decl
   16      | If
   17      | While
   18      | Affect
   19      | Invoc tPv
   20      | Ret

   21 Ret: tReturn Expr tPv

   22 $@4: %empty

   23 Invoc: tId $@4 tPo Params tPf

   24 Params: %empty
   25       | Param
   26       | Param tVir ParamNext

   27 ParamNext: Param
   28          | Param tVir ParamNext

   29 Param: Expr

   30 $@5: %empty

   31 If: tIf tPo Expr tPf $@5 Body Else

   32 Else: %empty

   33 $@6: %empty

   34 Else: $@6 tElse Body

   35 $@7: %empty

   36 $@8: %empty

   37 While: tWhile $@7 tPo Expr tPf $@8 Body

   38 Affect: tId tEq Expr tPv

   39 Expr: Expr tPlus Expr
   40     | tNot Expr
   41     | Expr tInf Expr
   42     | Expr tSup Expr
   43     | Expr tLess Expr
   44     | Expr tDiv Expr
   45     | Expr tStar Expr
   46     | Expr tEq tEq Expr
   47     | Expr tPipe tPipe Expr
   48     | Expr tAnd tAnd Expr
   49     | tPo Expr tPf
   50     | tNb
   51     | tId
   52     | Invoc

   53 Decl: tInt DeclX tPv

   54 DeclX: Decl1
   55      | Decl1 tVir DeclX

   56 Decl1: tId
   57      | tId tEq Expr


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tInt (258) 4 9 53
tId (259) 4 9 23 38 51 56 57
tPo (260) 4 23 31 37 49
tPf (261) 4 23 31 37 49
tAo (262) 12
tAf (263) 12
tVir (264) 7 26 28 55
tEq (265) 38 46 57
tPlus (266) 39
tLess (267) 43
tStar (268) 45
tPv (269) 19 21 38 53
tPipe (270) 47
tAnd (271) 48
tIf (272) 31
tElse (273) 34
tNb (274) 50
tWhile (275) 37
tReturn (276) 21
tNot (277) 40
tInf (278) 41
tSup (279) 42
tDiv (280) 44


Non-terminaux, suivis des règles où ils apparaissent

$accept (26)
    à gauche: 0
Prg (27)
    à gauche: 1 2, à droite: 0 1
Fonction (28)
    à gauche: 4, à droite: 1
$@1 (29)
    à gauche: 3, à droite: 4
Args (30)
    à gauche: 5 6, à droite: 4
ListeArgs (31)
    à gauche: 7 8, à droite: 6 7
Arg (32)
    à gauche: 9, à droite: 6 7
Body (33)
    à gauche: 12, à droite: 4 31 34 37
$@2 (34)
    à gauche: 10, à droite: 12
$@3 (35)
    à gauche: 11, à droite: 12
ListeInstr (36)
    à gauche: 13 14, à droite: 12 13
Instr (37)
    à gauche: 15 16 17 18 19 20, à droite: 13
Ret (38)
    à gauche: 21, à droite: 20
Invoc (39)
    à gauche: 23, à droite: 19 52
$@4 (40)
    à gauche: 22, à droite: 23
Params (41)
    à gauche: 24 25 26, à droite: 23
ParamNext (42)
    à gauche: 27 28, à droite: 26 28
Param (43)
    à gauche: 29, à droite: 25 26 27 28
If (44)
    à gauche: 31, à droite: 16
$@5 (45)
    à gauche: 30, à droite: 31
Else (46)
    à gauche: 32 34, à droite: 31
$@6 (47)
    à gauche: 33, à droite: 34
While (48)
    à gauche: 37, à droite: 17
$@7 (49)
    à gauche: 35, à droite: 37
$@8 (50)
    à gauche: 36, à droite: 37
Affect (51)
    à gauche: 38, à droite: 18
Expr (52)
    à gauche: 39 40 41 42 43 44 45 46 47 48 49 50 51 52, à droite:
    21 29 31 37 38 39 40 41 42 43 44 45 46 47 48 49 57
Decl (53)
    à gauche: 53, à droite: 15
DeclX (54)
    à gauche: 54 55, à droite: 53 55
Decl1 (55)
    à gauche: 56 57, à droite: 54 55


État 0

    0 $accept: . Prg $end

    tInt  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Prg)

    Prg       aller à l'état 2
    Fonction  aller à l'état 3


État 1

    4 Fonction: tInt . tId $@1 tPo Args tPf Body

    tId  décalage et aller à l'état 4


État 2

    0 $accept: Prg . $end

    $end  décalage et aller à l'état 5


État 3

    1 Prg: Fonction . Prg

    tInt  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Prg)

    Prg       aller à l'état 6
    Fonction  aller à l'état 3


État 4

    4 Fonction: tInt tId . $@1 tPo Args tPf Body

    $défaut  réduction par utilisation de la règle 3 ($@1)

    $@1  aller à l'état 7


État 5

    0 $accept: Prg $end .

    $défaut  accepter


État 6

    1 Prg: Fonction Prg .

    $défaut  réduction par utilisation de la règle 1 (Prg)


État 7

    4 Fonction: tInt tId $@1 . tPo Args tPf Body

    tPo  décalage et aller à l'état 8


État 8

    4 Fonction: tInt tId $@1 tPo . Args tPf Body

    tInt  décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 5 (Args)

    Args  aller à l'état 10
    Arg   aller à l'état 11


État 9

    9 Arg: tInt . tId

    tId  décalage et aller à l'état 12


État 10

    4 Fonction: tInt tId $@1 tPo Args . tPf Body

    tPf  décalage et aller à l'état 13


État 11

    6 Args: Arg . ListeArgs

    tVir  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 8 (ListeArgs)

    ListeArgs  aller à l'état 15


État 12

    9 Arg: tInt tId .

    $défaut  réduction par utilisation de la règle 9 (Arg)


État 13

    4 Fonction: tInt tId $@1 tPo Args tPf . Body

    tAo  décalage et aller à l'état 16

    Body  aller à l'état 17


État 14

    7 ListeArgs: tVir . Arg ListeArgs

    tInt  décalage et aller à l'état 9

    Arg  aller à l'état 18


État 15

    6 Args: Arg ListeArgs .

    $défaut  réduction par utilisation de la règle 6 (Args)


État 16

   12 Body: tAo . $@2 ListeInstr $@3 tAf

    $défaut  réduction par utilisation de la règle 10 ($@2)

    $@2  aller à l'état 19


État 17

    4 Fonction: tInt tId $@1 tPo Args tPf Body .

    $défaut  réduction par utilisation de la règle 4 (Fonction)


État 18

    7 ListeArgs: tVir Arg . ListeArgs

    tVir  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 8 (ListeArgs)

    ListeArgs  aller à l'état 20


État 19

   12 Body: tAo $@2 . ListeInstr $@3 tAf

    tInt     décalage et aller à l'état 21
    tId      décalage et aller à l'état 22
    tIf      décalage et aller à l'état 23
    tWhile   décalage et aller à l'état 24
    tReturn  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 14 (ListeInstr)

    ListeInstr  aller à l'état 26
    Instr       aller à l'état 27
    Ret         aller à l'état 28
    Invoc       aller à l'état 29
    If          aller à l'état 30
    While       aller à l'état 31
    Affect      aller à l'état 32
    Decl        aller à l'état 33


État 20

    7 ListeArgs: tVir Arg ListeArgs .

    $défaut  réduction par utilisation de la règle 7 (ListeArgs)


État 21

   53 Decl: tInt . DeclX tPv

    tId  décalage et aller à l'état 34

    DeclX  aller à l'état 35
    Decl1  aller à l'état 36


État 22

   23 Invoc: tId . $@4 tPo Params tPf
   38 Affect: tId . tEq Expr tPv

    tEq  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 22 ($@4)

    $@4  aller à l'état 38


État 23

   31 If: tIf . tPo Expr tPf $@5 Body Else

    tPo  décalage et aller à l'état 39


État 24

   37 While: tWhile . $@7 tPo Expr tPf $@8 Body

    $défaut  réduction par utilisation de la règle 35 ($@7)

    $@7  aller à l'état 40


État 25

   21 Ret: tReturn . Expr tPv

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 46


État 26

   12 Body: tAo $@2 ListeInstr . $@3 tAf

    $défaut  réduction par utilisation de la règle 11 ($@3)

    $@3  aller à l'état 47


État 27

   13 ListeInstr: Instr . ListeInstr

    tInt     décalage et aller à l'état 21
    tId      décalage et aller à l'état 22
    tIf      décalage et aller à l'état 23
    tWhile   décalage et aller à l'état 24
    tReturn  décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 14 (ListeInstr)

    ListeInstr  aller à l'état 48
    Instr       aller à l'état 27
    Ret         aller à l'état 28
    Invoc       aller à l'état 29
    If          aller à l'état 30
    While       aller à l'état 31
    Affect      aller à l'état 32
    Decl        aller à l'état 33


État 28

   20 Instr: Ret .

    $défaut  réduction par utilisation de la règle 20 (Instr)


État 29

   19 Instr: Invoc . tPv

    tPv  décalage et aller à l'état 49


État 30

   16 Instr: If .

    $défaut  réduction par utilisation de la règle 16 (Instr)


État 31

   17 Instr: While .

    $défaut  réduction par utilisation de la règle 17 (Instr)


État 32

   18 Instr: Affect .

    $défaut  réduction par utilisation de la règle 18 (Instr)


État 33

   15 Instr: Decl .

    $défaut  réduction par utilisation de la règle 15 (Instr)


État 34

   56 Decl1: tId .
   57      | tId . tEq Expr

    tEq  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 56 (Decl1)


État 35

   53 Decl: tInt DeclX . tPv

    tPv  décalage et aller à l'état 51


État 36

   54 DeclX: Decl1 .
   55      | Decl1 . tVir DeclX

    tVir  décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 54 (DeclX)


État 37

   38 Affect: tId tEq . Expr tPv

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 53


État 38

   23 Invoc: tId $@4 . tPo Params tPf

    tPo  décalage et aller à l'état 54


État 39

   31 If: tIf tPo . Expr tPf $@5 Body Else

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 55


État 40

   37 While: tWhile $@7 . tPo Expr tPf $@8 Body

    tPo  décalage et aller à l'état 56


État 41

   23 Invoc: tId . $@4 tPo Params tPf
   51 Expr: tId .

    tPo       réduction par utilisation de la règle 22 ($@4)
    $défaut  réduction par utilisation de la règle 51 (Expr)

    $@4  aller à l'état 38


État 42

   49 Expr: tPo . Expr tPf

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 57


État 43

   50 Expr: tNb .

    $défaut  réduction par utilisation de la règle 50 (Expr)


État 44

   40 Expr: tNot . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 58


État 45

   52 Expr: Invoc .

    $défaut  réduction par utilisation de la règle 52 (Expr)


État 46

   21 Ret: tReturn Expr . tPv
   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPv    décalage et aller à l'état 63
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68


État 47

   12 Body: tAo $@2 ListeInstr $@3 . tAf

    tAf  décalage et aller à l'état 69


État 48

   13 ListeInstr: Instr ListeInstr .

    $défaut  réduction par utilisation de la règle 13 (ListeInstr)


État 49

   19 Instr: Invoc tPv .

    $défaut  réduction par utilisation de la règle 19 (Instr)


État 50

   57 Decl1: tId tEq . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 70


État 51

   53 Decl: tInt DeclX tPv .

    $défaut  réduction par utilisation de la règle 53 (Decl)


État 52

   55 DeclX: Decl1 tVir . DeclX

    tId  décalage et aller à l'état 34

    DeclX  aller à l'état 71
    Decl1  aller à l'état 36


État 53

   38 Affect: tId tEq Expr . tPv
   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPv    décalage et aller à l'état 72
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68


État 54

   23 Invoc: tId $@4 tPo . Params tPf

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 24 (Params)

    Invoc   aller à l'état 45
    Params  aller à l'état 73
    Param   aller à l'état 74
    Expr    aller à l'état 75


État 55

   31 If: tIf tPo Expr . tPf $@5 Body Else
   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tPf    décalage et aller à l'état 76
    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68


État 56

   37 While: tWhile $@7 tPo . Expr tPf $@8 Body

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 77


État 57

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr
   49     | tPo Expr . tPf

    tPf    décalage et aller à l'état 78
    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68


État 58

   39 Expr: Expr . tPlus Expr
   40     | tNot Expr .
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    $défaut  réduction par utilisation de la règle 40 (Expr)


État 59

   46 Expr: Expr tEq . tEq Expr

    tEq  décalage et aller à l'état 79


État 60

   39 Expr: Expr tPlus . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 80


État 61

   43 Expr: Expr tLess . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 81


État 62

   45 Expr: Expr tStar . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 82


État 63

   21 Ret: tReturn Expr tPv .

    $défaut  réduction par utilisation de la règle 21 (Ret)


État 64

   47 Expr: Expr tPipe . tPipe Expr

    tPipe  décalage et aller à l'état 83


État 65

   48 Expr: Expr tAnd . tAnd Expr

    tAnd  décalage et aller à l'état 84


État 66

   41 Expr: Expr tInf . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 85


État 67

   42 Expr: Expr tSup . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 86


État 68

   44 Expr: Expr tDiv . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 87


État 69

   12 Body: tAo $@2 ListeInstr $@3 tAf .

    $défaut  réduction par utilisation de la règle 12 (Body)


État 70

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr
   57 Decl1: tId tEq Expr .

    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 57 (Decl1)


État 71

   55 DeclX: Decl1 tVir DeclX .

    $défaut  réduction par utilisation de la règle 55 (DeclX)


État 72

   38 Affect: tId tEq Expr tPv .

    $défaut  réduction par utilisation de la règle 38 (Affect)


État 73

   23 Invoc: tId $@4 tPo Params . tPf

    tPf  décalage et aller à l'état 88


État 74

   25 Params: Param .
   26       | Param . tVir ParamNext

    tVir  décalage et aller à l'état 89

    $défaut  réduction par utilisation de la règle 25 (Params)


État 75

   29 Param: Expr .
   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 29 (Param)


État 76

   31 If: tIf tPo Expr tPf . $@5 Body Else

    $défaut  réduction par utilisation de la règle 30 ($@5)

    $@5  aller à l'état 90


État 77

   37 While: tWhile $@7 tPo Expr . tPf $@8 Body
   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tPf    décalage et aller à l'état 91
    tEq    décalage et aller à l'état 59
    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tPipe  décalage et aller à l'état 64
    tAnd   décalage et aller à l'état 65
    tInf   décalage et aller à l'état 66
    tSup   décalage et aller à l'état 67
    tDiv   décalage et aller à l'état 68


État 78

   49 Expr: tPo Expr tPf .

    $défaut  réduction par utilisation de la règle 49 (Expr)


État 79

   46 Expr: Expr tEq tEq . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 92


État 80

   39 Expr: Expr . tPlus Expr
   39     | Expr tPlus Expr .
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 39 (Expr)


État 81

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   43     | Expr tLess Expr .
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 43 (Expr)


État 82

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   45     | Expr tStar Expr .
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    $défaut  réduction par utilisation de la règle 45 (Expr)


État 83

   47 Expr: Expr tPipe tPipe . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 93


État 84

   48 Expr: Expr tAnd tAnd . Expr

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc  aller à l'état 45
    Expr   aller à l'état 94


État 85

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   41     | Expr tInf Expr .
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 41 (Expr)


État 86

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   42     | Expr tSup Expr .
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 42 (Expr)


État 87

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   44     | Expr tDiv Expr .
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    $défaut  réduction par utilisation de la règle 44 (Expr)


État 88

   23 Invoc: tId $@4 tPo Params tPf .

    $défaut  réduction par utilisation de la règle 23 (Invoc)


État 89

   26 Params: Param tVir . ParamNext

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc      aller à l'état 45
    ParamNext  aller à l'état 95
    Param      aller à l'état 96
    Expr       aller à l'état 75


État 90

   31 If: tIf tPo Expr tPf $@5 . Body Else

    tAo  décalage et aller à l'état 16

    Body  aller à l'état 97


État 91

   37 While: tWhile $@7 tPo Expr tPf . $@8 Body

    $défaut  réduction par utilisation de la règle 36 ($@8)

    $@8  aller à l'état 98


État 92

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   46     | Expr tEq tEq Expr .
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 46 (Expr)


État 93

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   47     | Expr tPipe tPipe Expr .
   48     | Expr . tAnd tAnd Expr

    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 47 (Expr)


État 94

   39 Expr: Expr . tPlus Expr
   41     | Expr . tInf Expr
   42     | Expr . tSup Expr
   43     | Expr . tLess Expr
   44     | Expr . tDiv Expr
   45     | Expr . tStar Expr
   46     | Expr . tEq tEq Expr
   47     | Expr . tPipe tPipe Expr
   48     | Expr . tAnd tAnd Expr
   48     | Expr tAnd tAnd Expr .

    tPlus  décalage et aller à l'état 60
    tLess  décalage et aller à l'état 61
    tStar  décalage et aller à l'état 62
    tDiv   décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 48 (Expr)


État 95

   26 Params: Param tVir ParamNext .

    $défaut  réduction par utilisation de la règle 26 (Params)


État 96

   27 ParamNext: Param .
   28          | Param . tVir ParamNext

    tVir  décalage et aller à l'état 99

    $défaut  réduction par utilisation de la règle 27 (ParamNext)


État 97

   31 If: tIf tPo Expr tPf $@5 Body . Else

    tElse     réduction par utilisation de la règle 33 ($@6)
    $défaut  réduction par utilisation de la règle 32 (Else)

    Else  aller à l'état 100
    $@6   aller à l'état 101


État 98

   37 While: tWhile $@7 tPo Expr tPf $@8 . Body

    tAo  décalage et aller à l'état 16

    Body  aller à l'état 102


État 99

   28 ParamNext: Param tVir . ParamNext

    tId   décalage et aller à l'état 41
    tPo   décalage et aller à l'état 42
    tNb   décalage et aller à l'état 43
    tNot  décalage et aller à l'état 44

    Invoc      aller à l'état 45
    ParamNext  aller à l'état 103
    Param      aller à l'état 96
    Expr       aller à l'état 75


État 100

   31 If: tIf tPo Expr tPf $@5 Body Else .

    $défaut  réduction par utilisation de la règle 31 (If)


État 101

   34 Else: $@6 . tElse Body

    tElse  décalage et aller à l'état 104


État 102

   37 While: tWhile $@7 tPo Expr tPf $@8 Body .

    $défaut  réduction par utilisation de la règle 37 (While)


État 103

   28 ParamNext: Param tVir ParamNext .

    $défaut  réduction par utilisation de la règle 28 (ParamNext)


État 104

   34 Else: $@6 tElse . Body

    tAo  décalage et aller à l'état 16

    Body  aller à l'état 105


État 105

   34 Else: $@6 tElse Body .

    $défaut  réduction par utilisation de la règle 34 (Else)
